--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,5 @@
 _repo: Eunice-and-Cricket_66091
-_version: 0.1.0
+_version: 0.2.0
 contributor:
   illustrator:
     agent_name: Richards, Harriet Roosevelt
@@ -7,6 +7,9 @@ contributor:
     deathdate: 1932
     gutenberg_agent_id: '8437'
     url: http://www.gutenberg.org/2009/agents/8437
+covers:
+- cover_type: archival
+  image_path: 66091-h/images/cover.jpg
 creator:
   author:
     agent_name: Timlow, Elizabeth Weston
@@ -16,6 +19,8 @@ creator:
     gutenberg_agent_id: '26546'
     url: http://www.gutenberg.org/2009/agents/26546
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/66091#Eunice-and-Cricket
 gutenberg_issued: '2021-08-20'
 identifiers:
   gutenberg: '66091'
